mkmcheck/wishlist/gen/wish_grammarParser.py
# Generated from /home/biggenerals/PycharmProjects/mkmcheck/mkmcheck/wishlist/wish_grammar.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class wish_grammarParser ( Parser ):

    grammarFileName = "wish_grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "';'", "'#'", "','", "<INVALID>", 
                     "<INVALID>", "'true'", "'false'", "'white'", "'black'", 
                     "'silver'", "'gold'", "'mint'", "'near_mint'", "'excellent'", 
                     "'good'", "'light_played'", "'played'", "'poor'", "'english'", 
                     "'french'", "'german'", "'spanish'", "'italian'", "'simplified_chinese'", 
                     "'japanese'", "'portguese'", "'russian'", "'korean'", 
                     "'traditional_chinese'", "'exclude_partially_fulfilled'", 
                     "'include_partially_fulfilled'", "'|'", "'from_expansions'", 
                     "'is_border'", "'is_minimum_condition'", "'is_language'", 
                     "'is_foil'", "'is_altered'", "'is_signed'", "'any_language'", 
                     "'can_be_foil'", "'can_be_altered'", "'can_be_signed'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "INTEGER", "EXPANSION_CODE_VALUE", 
                      "TRUE", "FALSE", "WHITE_BORDER", "BLACK_BORDER", "SILVER_BORDER", 
                      "GOLD_BORDER", "MINT", "NEAR_MINT", "EXCELLENT", "GOOD", 
                      "LIGHT_PLAYED", "PLAYED", "POOR", "ENGLISH", "FRENCH", 
                      "GERMAN", "SPANISH", "ITALIAN", "SIMPLIFIED_CHINESE", 
                      "JAPANESE", "PORTUGUESE", "RUSSIAN", "KOREAN", "TRADITIONAL_CHINESE", 
                      "EXCLUDE_PARTIALLY_FULFILLED", "INCLUDE_PARTIALLY_FULFILLED", 
                      "REQUIREMENT_VALUE_SEPERATOR", "FROM_EXPANSIONS", 
                      "IS_BORDER", "IS_MINIMUM_CONDITION", "IS_LANGUAGE", 
                      "IS_FOIL", "IS_ALTERED", "IS_SIGNED", "ANY_LANGUAGE", 
                      "CAN_BE_FOIL", "CAN_BE_ALTERED", "CAN_BE_SIGNED", 
                      "VALUE", "WHITESPACE" ]

    RULE_start = 0
    RULE_wish = 1
    RULE_meta = 2
    RULE_inclution_strategy = 3
    RULE_cardboard_wishes = 4
    RULE_cardboard_wish = 5
    RULE_required_cardboard = 6
    RULE_requirements = 7
    RULE_requirement = 8
    RULE_expansions = 9
    RULE_boolean = 10
    RULE_border = 11
    RULE_condition = 12
    RULE_language = 13

    ruleNames =  [ "start", "wish", "meta", "inclution_strategy", "cardboard_wishes", 
                   "cardboard_wish", "required_cardboard", "requirements", 
                   "requirement", "expansions", "boolean", "border", "condition", 
                   "language" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    INTEGER=6
    EXPANSION_CODE_VALUE=7
    TRUE=8
    FALSE=9
    WHITE_BORDER=10
    BLACK_BORDER=11
    SILVER_BORDER=12
    GOLD_BORDER=13
    MINT=14
    NEAR_MINT=15
    EXCELLENT=16
    GOOD=17
    LIGHT_PLAYED=18
    PLAYED=19
    POOR=20
    ENGLISH=21
    FRENCH=22
    GERMAN=23
    SPANISH=24
    ITALIAN=25
    SIMPLIFIED_CHINESE=26
    JAPANESE=27
    PORTUGUESE=28
    RUSSIAN=29
    KOREAN=30
    TRADITIONAL_CHINESE=31
    EXCLUDE_PARTIALLY_FULFILLED=32
    INCLUDE_PARTIALLY_FULFILLED=33
    REQUIREMENT_VALUE_SEPERATOR=34
    FROM_EXPANSIONS=35
    IS_BORDER=36
    IS_MINIMUM_CONDITION=37
    IS_LANGUAGE=38
    IS_FOIL=39
    IS_ALTERED=40
    IS_SIGNED=41
    ANY_LANGUAGE=42
    CAN_BE_FOIL=43
    CAN_BE_ALTERED=44
    CAN_BE_SIGNED=45
    VALUE=46
    WHITESPACE=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def wish(self):
            return self.getTypedRuleContext(wish_grammarParser.WishContext,0)


        def EOF(self):
            return self.getToken(wish_grammarParser.EOF, 0)

        def getRuleIndex(self):
            return wish_grammarParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = wish_grammarParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.wish()
            self.state = 29
            self.match(wish_grammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WishContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return wish_grammarParser.RULE_wish

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class WishNoMetaContext(WishContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a wish_grammarParser.WishContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def cardboard_wishes(self):
            return self.getTypedRuleContext(wish_grammarParser.Cardboard_wishesContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWishNoMeta" ):
                listener.enterWishNoMeta(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWishNoMeta" ):
                listener.exitWishNoMeta(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWishNoMeta" ):
                return visitor.visitWishNoMeta(self)
            else:
                return visitor.visitChildren(self)


    class WishWithMetaContext(WishContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a wish_grammarParser.WishContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def meta(self):
            return self.getTypedRuleContext(wish_grammarParser.MetaContext,0)

        def cardboard_wishes(self):
            return self.getTypedRuleContext(wish_grammarParser.Cardboard_wishesContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWishWithMeta" ):
                listener.enterWishWithMeta(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWishWithMeta" ):
                listener.exitWishWithMeta(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWishWithMeta" ):
                return visitor.visitWishWithMeta(self)
            else:
                return visitor.visitChildren(self)



    def wish(self):

        localctx = wish_grammarParser.WishContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_wish)
        try:
            self.state = 35
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [wish_grammarParser.INTEGER, wish_grammarParser.VALUE]:
                localctx = wish_grammarParser.WishNoMetaContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 31
                self.cardboard_wishes()
                pass
            elif token in [wish_grammarParser.T__0]:
                localctx = wish_grammarParser.WishWithMetaContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 32
                self.meta()
                self.state = 33
                self.cardboard_wishes()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MetaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def inclution_strategy(self):
            return self.getTypedRuleContext(wish_grammarParser.Inclution_strategyContext,0)


        def getRuleIndex(self):
            return wish_grammarParser.RULE_meta

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMeta" ):
                listener.enterMeta(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMeta" ):
                listener.exitMeta(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMeta" ):
                return visitor.visitMeta(self)
            else:
                return visitor.visitChildren(self)




    def meta(self):

        localctx = wish_grammarParser.MetaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_meta)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.match(wish_grammarParser.T__0)
            self.state = 38
            self.inclution_strategy()
            self.state = 39
            self.match(wish_grammarParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Inclution_strategyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return wish_grammarParser.RULE_inclution_strategy

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IncludePartiallyFulfilledContext(Inclution_strategyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a wish_grammarParser.Inclution_strategyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INCLUDE_PARTIALLY_FULFILLED(self):
            return self.getToken(wish_grammarParser.INCLUDE_PARTIALLY_FULFILLED, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncludePartiallyFulfilled" ):
                listener.enterIncludePartiallyFulfilled(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncludePartiallyFulfilled" ):
                listener.exitIncludePartiallyFulfilled(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIncludePartiallyFulfilled" ):
                return visitor.visitIncludePartiallyFulfilled(self)
            else:
                return visitor.visitChildren(self)


    class ExcludePartiallyFulfilledContext(Inclution_strategyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a wish_grammarParser.Inclution_strategyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EXCLUDE_PARTIALLY_FULFILLED(self):
            return self.getToken(wish_grammarParser.EXCLUDE_PARTIALLY_FULFILLED, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExcludePartiallyFulfilled" ):
                listener.enterExcludePartiallyFulfilled(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExcludePartiallyFulfilled" ):
                listener.exitExcludePartiallyFulfilled(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExcludePartiallyFulfilled" ):
                return visitor.visitExcludePartiallyFulfilled(self)
            else:
                return visitor.visitChildren(self)



    def inclution_strategy(self):

        localctx = wish_grammarParser.Inclution_strategyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_inclution_strategy)
        try:
            self.state = 43
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [wish_grammarParser.EXCLUDE_PARTIALLY_FULFILLED]:
                localctx = wish_grammarParser.ExcludePartiallyFulfilledContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 41
                self.match(wish_grammarParser.EXCLUDE_PARTIALLY_FULFILLED)
                pass
            elif token in [wish_grammarParser.INCLUDE_PARTIALLY_FULFILLED]:
                localctx = wish_grammarParser.IncludePartiallyFulfilledContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 42
                self.match(wish_grammarParser.INCLUDE_PARTIALLY_FULFILLED)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Cardboard_wishesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return wish_grammarParser.RULE_cardboard_wishes

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CardboardWishChainContext(Cardboard_wishesContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a wish_grammarParser.Cardboard_wishesContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def cardboard_wish(self):
            return self.getTypedRuleContext(wish_grammarParser.Cardboard_wishContext,0)

        def cardboard_wishes(self):
            return self.getTypedRuleContext(wish_grammarParser.Cardboard_wishesContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCardboardWishChain" ):
                listener.enterCardboardWishChain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCardboardWishChain" ):
                listener.exitCardboardWishChain(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCardboardWishChain" ):
                return visitor.visitCardboardWishChain(self)
            else:
                return visitor.visitChildren(self)


    class CardboardWishBaseContext(Cardboard_wishesContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a wish_grammarParser.Cardboard_wishesContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def cardboard_wish(self):
            return self.getTypedRuleContext(wish_grammarParser.Cardboard_wishContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCardboardWishBase" ):
                listener.enterCardboardWishBase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCardboardWishBase" ):
                listener.exitCardboardWishBase(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCardboardWishBase" ):
                return visitor.visitCardboardWishBase(self)
            else:
                return visitor.visitChildren(self)



    def cardboard_wishes(self):

        localctx = wish_grammarParser.Cardboard_wishesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_cardboard_wishes)
        try:
            self.state = 50
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = wish_grammarParser.CardboardWishBaseContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.cardboard_wish()
                pass

            elif la_ == 2:
                localctx = wish_grammarParser.CardboardWishChainContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.cardboard_wish()
                self.state = 47
                self.match(wish_grammarParser.T__2)
                self.state = 48
                self.cardboard_wishes()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Cardboard_wishContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return wish_grammarParser.RULE_cardboard_wish

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class RequiredCardboardWithAmountContext(Cardboard_wishContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a wish_grammarParser.Cardboard_wishContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INTEGER(self):
            return self.getToken(wish_grammarParser.INTEGER, 0)
        def required_cardboard(self):
            return self.getTypedRuleContext(wish_grammarParser.Required_cardboardContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequiredCardboardWithAmount" ):
                listener.enterRequiredCardboardWithAmount(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequiredCardboardWithAmount" ):
                listener.exitRequiredCardboardWithAmount(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRequiredCardboardWithAmount" ):
                return visitor.visitRequiredCardboardWithAmount(self)
            else:
                return visitor.visitChildren(self)


    class RequiredCardboardNoAmountContext(Cardboard_wishContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a wish_grammarParser.Cardboard_wishContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def required_cardboard(self):
            return self.getTypedRuleContext(wish_grammarParser.Required_cardboardContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequiredCardboardNoAmount" ):
                listener.enterRequiredCardboardNoAmount(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequiredCardboardNoAmount" ):
                listener.exitRequiredCardboardNoAmount(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRequiredCardboardNoAmount" ):
                return visitor.visitRequiredCardboardNoAmount(self)
            else:
                return visitor.visitChildren(self)



    def cardboard_wish(self):

        localctx = wish_grammarParser.Cardboard_wishContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_cardboard_wish)
        try:
            self.state = 56
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [wish_grammarParser.VALUE]:
                localctx = wish_grammarParser.RequiredCardboardNoAmountContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.required_cardboard()
                pass
            elif token in [wish_grammarParser.INTEGER]:
                localctx = wish_grammarParser.RequiredCardboardWithAmountContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.match(wish_grammarParser.INTEGER)
                self.state = 54
                self.match(wish_grammarParser.T__3)
                self.state = 55
                self.required_cardboard()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Required_cardboardContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return wish_grammarParser.RULE_required_cardboard

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class RequiredCardboardNoRequirementsContext(Required_cardboardContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a wish_grammarParser.Required_cardboardContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VALUE(self):
            return self.getToken(wish_grammarParser.VALUE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequiredCardboardNoRequirements" ):
                listener.enterRequiredCardboardNoRequirements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequiredCardboardNoRequirements" ):
                listener.exitRequiredCardboardNoRequirements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRequiredCardboardNoRequirements" ):
                return visitor.visitRequiredCardboardNoRequirements(self)
            else:
                return visitor.visitChildren(self)


    class RequiredCardboardWithRequirementsContext(Required_cardboardContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a wish_grammarParser.Required_cardboardContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VALUE(self):
            return self.getToken(wish_grammarParser.VALUE, 0)
        def requirements(self):
            return self.getTypedRuleContext(wish_grammarParser.RequirementsContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequiredCardboardWithRequirements" ):
                listener.enterRequiredCardboardWithRequirements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequiredCardboardWithRequirements" ):
                listener.exitRequiredCardboardWithRequirements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRequiredCardboardWithRequirements" ):
                return visitor.visitRequiredCardboardWithRequirements(self)
            else:
                return visitor.visitChildren(self)



    def required_cardboard(self):

        localctx = wish_grammarParser.Required_cardboardContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_required_cardboard)
        try:
            self.state = 64
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = wish_grammarParser.RequiredCardboardNoRequirementsContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.match(wish_grammarParser.VALUE)
                pass

            elif la_ == 2:
                localctx = wish_grammarParser.RequiredCardboardWithRequirementsContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.match(wish_grammarParser.VALUE)
                self.state = 60
                self.match(wish_grammarParser.T__0)
                self.state = 61
                self.requirements(0)
                self.state = 62
                self.match(wish_grammarParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RequirementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return wish_grammarParser.RULE_requirements

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class RequirementChainContext(RequirementsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a wish_grammarParser.RequirementsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def requirements(self):
            return self.getTypedRuleContext(wish_grammarParser.RequirementsContext,0)

        def requirement(self):
            return self.getTypedRuleContext(wish_grammarParser.RequirementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequirementChain" ):
                listener.enterRequirementChain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequirementChain" ):
                listener.exitRequirementChain(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRequirementChain" ):
                return visitor.visitRequirementChain(self)
            else:
                return visitor.visitChildren(self)


    class RequirementBaseContext(RequirementsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a wish_grammarParser.RequirementsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def requirement(self):
            return self.getTypedRuleContext(wish_grammarParser.RequirementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequirementBase" ):
                listener.enterRequirementBase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequirementBase" ):
                listener.exitRequirementBase(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRequirementBase" ):
                return visitor.visitRequirementBase(self)
            else:
                return visitor.visitChildren(self)



    def requirements(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = wish_grammarParser.RequirementsContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_requirements, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = wish_grammarParser.RequirementBaseContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 67
            self.requirement()
            self._ctx.stop = self._input.LT(-1)
            self.state = 74
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = wish_grammarParser.RequirementChainContext(self, wish_grammarParser.RequirementsContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_requirements)
                    self.state = 69
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 70
                    self.match(wish_grammarParser.T__2)
                    self.state = 71
                    self.requirement() 
                self.state = 76
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class RequirementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return wish_grammarParser.RULE_requirement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CanBeAlteredContext(RequirementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a wish_grammarParser.RequirementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CAN_BE_ALTERED(self):
            return self.getToken(wish_grammarParser.CAN_BE_ALTERED, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCanBeAltered" ):
                listener.enterCanBeAltered(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCanBeAltered" ):
                listener.exitCanBeAltered(self)
